# cmake

./: .gitignore  HW_1.ipynb  README.md
exec/: CMakeLists.txt  exec.c
exec/include/: exec.h
executable/: CMakeLists.txt  executable.c
executable/cmake-build/: executable
executable/include/: executable.h
headero/: CMakeLists.txt
headero/include/: headero1.h  headero2.h
headeronly/: CMakeLists.txt
headeronly/cmake-build/: headeronlyConfig.cmake
headeronly/include/: headeronly1.h  headeronly2.h
libso/: CMakeLists.txt  libso.c
libso/include/: libsoh1.h  libsoh2.h
sharedlibrary/: CMakeLists.txt  sharedlibrary.c
sharedlibrary/cmake-build/: sharedlibraryConfig.cmake
sharedlibrary/include/: sharedlibrary1.h  sharedlibrary2.h
